src/test/deca/context/invalid/homemade/moduloWithFloatRight_decompile.res
{
	print((5 % 4.0));
}
